<?xml version="1.0" encoding="utf-8"?>
<!-- Bottom Navigation Menu for CricketHub - 4 main tabs -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Tab 1: Home / Dashboard -->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/nav_home" />

    <!-- Tab 2: Teams -->
    <item
        android:id="@+id/nav_teams"
        android:icon="@drawable/team2"
        android:title="@string/nav_teams" />

    <!-- Tab 3: Tournaments -->
    <item
        android:id="@+id/nav_tournaments"
        android:icon="@drawable/tm"
        android:title="Tournaments" />

    <!-- Tab 4: Match History -->
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/history"
        android:title="@string/nav_history" />

</menu>
